//
//  ProfileModel.swift
//  ImageFeed
//
//  Created by Александр Гегешидзе on 21.01.2024.
//

import Foundation

struct Profile {
    let username: String
    let name: String
    let loginName: String
    let bio: String
}
